retter power factor

--- a/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
@@ -2,12 +2,12 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \subsubsection{Beregningsfunktioner}
-For at beregne de ønskede værdier er der lavet en række funktioner. Disse funktioner er kort beskrevet herunder. Yderlig information findes i dokumentation\footnote{Projektdokumentation, 9.2.4, Beregning af rms og power faktor}
+For at beregne de ønskede værdier er der lavet en række funktioner. Disse funktioner er kort beskrevet herunder. Yderlig information findes i dokumentation\footnote{Projektdokumentation, 9.2.4, Beregning af rms og power factor}
 
 \textbf{Rms:}
 Funktionen modtager et array af absolutte værdier for et signal og beregner rms-værdien ved den frekvensbin, der passer til 50Hz.
 
-\textbf{Power faktor:}
+\textbf{Power factor:}
 Funktionen beregner vinklen for strøm og spænding for derefter at beregne power factor ved at tage cosinus til vinkel differencen. Funktionen tager ikke højde for, om strømmen er leading eller lagging.
 
 \textbf{THD:}
