--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -24,15 +24,15 @@ Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 	\centering
 	\caption{Arbejdsfordeling}
 	\label{tab:arbejdsfordeling}
-	\begin{tabular}{@{}lll@{}}
+	\begin{tabular}{@{}ll@{}}
 		\toprule
 		Navn                    & Arbejdsområde                                                  \\ \midrule
-		\multirow{2}{*}{Jeppe Hansen}             & \multirow{2}{*}{Måleenhed}                                     \\
-		& Søren Jensen            &                                                                \\\midrule
-		\multirow{2}{*}{Laurids Jørgensen}        & \multirow{2}{*}{Styringsenhed}                                 \\
-		& Dennis Slot Larsen            &                                                                \\\midrule
-		\multirow{2}{*}{Caroline Møller Sørensen} &          & \multirow{2}{*}{Distributionslinje, belastning og Trinskifter} \\
-		& Sophia Amalie Mortensen &                                                                \\ \midrule
+		Jeppe Hansen            & \multirow{2}{*}{Måleenhed}                                     \\
+		Søren Jensen            &                                                                \\\midrule
+		Laurids Givskov Jørgensen       & \multirow{2}{*}{Styringsenhed}                                 \\
+		Dennis Slot Larsen            &                                                                \\\midrule
+		Caroline Møller Sørensen       & \multirow{2}{*}{Distributionslinje, belastning og trinskifter} \\
+		Sophia Amalie Mortensen &                                                                \\ \midrule
 	\end{tabular}
 \end{table}
 
