--- a/ProjektRapport/sektioner/Maaleenhed/Kalibrering.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Kalibrering.tex
@@ -7,7 +7,7 @@ Den forstærkning og dæmpning, der er implementeret i Måleenhedens hardware, g
 
 Ved at påtrykke Måleenheden en kendt spænding og aflæse den målte værdi på Måleenheden kan sammenhængen mellem reel spænding og målt spænding plottes som en lineær sammenhæng. Hældningen af den lineære tendenslinje vil give kalibreringskonstanten, som skal ganges på målingen i softwaren. 
 
-Resultatet af kalibreringen er vist i Figur \ref{fig:MEgraf}
+Resultatet af kalibreringen er vist i figur \ref{fig:MEgraf}
 
 \begin{figure}[H]
 	\centering
