--- a/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/UARTogTHD.tex
@@ -11,7 +11,7 @@ Funktionen modtager et array af absolutte værdier for et signal og beregner rms
 Funktionen beregner vinklen for strøm og spænding for derefter at beregne power factor ved at tage cosinus til vinkel differencen. Funktionen tager ikke højde for, om strømmen er leading eller lagging.
 
 \textbf{THD:}
-Beregningen af og baggrunden for THD er beskrevet i Afsnit \ref{sec:THD}. Den beregning, der laves i PSoC, medregner kun indholdet af de fire første harmoniske i signalet. Formlen, der anvendes i softwaren, er givet i ligning \ref{eq:THDsoft}.
+Beregningen af og baggrunden for THD er beskrevet i afsnit \ref{sec:THD}. Den beregning, der laves i PSoC, medregner kun indholdet af de fire første harmoniske i signalet. Formlen, der anvendes i softwaren, er givet i ligning \ref{eq:THDsoft}.
 \begin{align}
 \label{eq:THDsoft}
 THD = \dfrac{\sqrt{V_2^{2}+V_3^{2}+V_4^{2}+V_5^{2}}}{V_{1}}
@@ -19,7 +19,7 @@ THD = \dfrac{\sqrt{V_2^{2}+V_3^{2}+V_4^{2}+V_5^{2}}}{V_{1}}
  
 
 \subsubsection{UART kommunikation}
-Kommunikationen mellem Måleenheden og Styringsenheden er allokeret på en UART forbindelse, se Figur \ref{fig:Allokering} for overordnet allokeringsdiagram. UART forbindelsen transmitterer 16bit værdier for strøm, spænding, THD og power factor. Værdierne deles inden transmissionen op i to pakker af 8bit og samles igen i Styringsenheden. Protokol og indstilling af UART forbindelsen er beskrevet i dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
+Kommunikationen mellem Måleenheden og Styringsenheden er allokeret på en UART forbindelse, se figur \ref{fig:Allokering} for overordnet allokeringsdiagram. UART forbindelsen transmitterer 16bit værdier for strøm, spænding, THD og power factor. Værdierne deles inden transmissionen op i to pakker af 8bit og samles igen i Styringsenheden. Protokol og indstilling af UART forbindelsen er beskrevet i dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
 
 
 
