Styringsenhed sikkert rettet

--- a/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-I dette afsnit vil der blive gået i dybden med den samlede Styringsenhed. Herunder vil der blandt andet være fokus på nogle af de valg, der er taget både før og i løbet af designfasen for Styringsenhed og de enkelte moduler, den består af. Derudover vil selve implementeringen af Styringsenhedens software på dens processorere være beskrevet, men der vil i rapporten kun blive beskrevet centrale dele og udvalgte eksempler.
+I dette afsnit vil der blive gået i dybden med den samlede Styringsenhed. Herunder vil der blandt andet være fokus på nogle af de valg, der er taget både før og i løbet af designfasen for Styringsenhed og de enkelte moduler, den består af. Derudover vil selve implementeringen af Styringsenhedens software på dens processorere være beskrevet, men der vil i rapporten kun blive beskrevet centrale dele og udvalgte eksempler. Styringsenheden er udviklet med henblik på sikker og overskuelig brug, pålidelig datatransmission og at softwaren skal være nem at videreudvikle med henblik på udvidelse af antallet af Måleenheder. Med sikker brug menes at systemet altid er et stabilt sted, før en ny ændring kan forekomme.
 
 
 
