--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -36,3 +36,11 @@ Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 	\end{tabular}
 \end{table}
 
+\section{Udviklingsværktøjer}
+
+\textbf{PSoC Creator} anvendes til udvikling af software til Måleenhed.\\
+\textbf{Multisim} anvendes til at simulere diverse kredsløb til systemet.\\
+\textbf{TIA portal V13} anvendes til programmering af PLC.\\
+\textbf{Visuel studio 2013} anvendes til testprogram for styringsenhed.\\
+\textbf{Arduino 1.8.2 software} anvendes til udvikling af program til Arduino. 
+
