Mindre ændring i kontrolmodul

--- a/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
@@ -44,7 +44,7 @@ Det er vigtigt at pointere, at systemet skal være nemt at udvide til at underst
 
 \subsection{Styring af Trinskifter}
 
-Angående styring af Trinskifteren blev det tidligt besluttet at benytte dens analoge 24VDC udgange på Q0.6, Q0.7 og Q1.0 til styringen af relæerne på Trinskifter. Disse udgange bliver dog styret med et logisk højt (24VDC) eller lavt(0V) signal. Der henvises til Trinskifter for mere om relækredsløbet, se afsnit \ref{sec:relae}.
+Angående styring af Trinskifteren blev det tidligt besluttet at benytte dens digitale 24VDC udgange på Q0.6, Q0.7 og Q1.0 til styringen af relæerne på Trinskifter. Der henvises til Trinskifter for mere om relækredsløbet, se afsnit \ref{sec:relae}.
 Samtidig er projektet proof of concept, så det er kun spændingsmålinger fra én forbruger, der vil blive reguleret med hensyn til. Dette simplificerer den FB, der udvikles til denne styring væsentligt, da der kun er et input. På \ref{fig:GraphTrinskifterPLC} ses et diagram over sekvenserne og flowet imellem dem for FB'en Trinskifter.
 
 \begin{figure}[H] % (alternativt [H])
